@@ -1,7 +1,7 @@
-FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:21-jre
 VOLUME ["/tmp","/log"]
 EXPOSE 8081
 ARG JAR_FILE
-ENV JAVA_UPPER_VERSION=eclipse-temurin:17-jre
+ENV JAVA_UPPER_VERSION=eclipse-temurin:21-jre
 COPY ./target/TenantService.jar app.jar
-ENTRYPOINT ["java","--enable-preview","-Djava.security.egd=file:/dev/./urandom","-XX:MaxRAMPercentage=75","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:MaxRAMPercentage=75","-jar","/app.jar"]
